feat: module support for Optional param annotations